# game

./: CMakeLists.txt  Readme.md  build.bat  run.bat
include/: application.h  render.h
include/component/: component.h  frame_component.h  player.h
include/manager/: event_manager.h  manager.h  render_manager.h  window_manager.h
include/utils/: common_define.h  nocopy.h
src/: application.cc  main.cc
src/component/: frame_component.cpp  player.cc
src/manager/: event_manager.cpp  render_manager.cpp  window_manager.cpp
